Fixed Overlapping footer buttons with date fields

--- a/gwt-material/src/main/resources/gwt/material/design/public/css/overridecss.css
+++ b/gwt-material/src/main/resources/gwt/material/design/public/css/overridecss.css
@@ -145,7 +145,7 @@ ul li button.btn-floating {
 	position: absolute;
 	bottom: 0;
 	right: 0;
-	top: 300px
+	top: 320px
 }
 
 .landscape .picker__month-display {
